--- a/GSOptima/Views/Shared/_OpeningLayout.cshtml
+++ b/GSOptima/Views/Shared/_OpeningLayout.cshtml
@@ -65,22 +65,33 @@
                 <ul class="nav navbar-nav">
                     @*<li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>*@
                     @*<li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
+        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>*@
                     @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAuthenticatedUser")).Succeeded)
                     {
                         @*<li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools<span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a asp-controller="StockChart" asp-action="Index">Chart</a></li>
-                                <li><a asp-area="" asp-controller="StockWatchList" asp-action="Index">Watchlist</a></li>
-                                <li role="separator" class="divider"></li>
-                                <li><a  asp-controller="StockScreening" asp-action="Index">Screening</a></li>
-                
-                            </ul>
-                        </li>*@
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tools<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a asp-controller="StockChart" asp-action="Index">Chart</a></li>
+                    <li><a asp-area="" asp-controller="StockWatchList" asp-action="Index">Watchlist</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a  asp-controller="StockScreening" asp-action="Index">Screening</a></li>
+
+                </ul>
+            </li>*@
                         <li><a asp-controller="StockChart" asp-action="Index">Chart</a></li>
                         <li><a asp-controller="StockScreening" asp-action="Index">Screening</a></li>
                         <li><a asp-area="" asp-controller="StockWatchList" asp-action="Index">Watchlist</a></li>
+
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">GS Pro <span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a asp-controller="GSProWatchList" asp-action="Index">Watch List</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li><a asp-area="" asp-controller="GSProWatchList" asp-action="Journal">Trading Journal</a></li>
+
+                            </ul>
+                        </li>
+
                     }
                     @if ((await AuthorizationService.AuthorizeAsync(User, "RequireAdministratorRole")).Succeeded)
                     {
@@ -96,7 +107,7 @@
                             </ul>
                         </li>
                     }
-                    
+
 
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
