Tambah GS Pro Watch List

--- a/GSOptima/Views/Account/_CreateUser.cshtml
+++ b/GSOptima/Views/Account/_CreateUser.cshtml
@@ -58,7 +58,7 @@
             <div class="col-md-10">
                 <select asp-for="MembershipType" class="form-control" id="MembershipType">
                     <option value="GSOPTIMA">GS Optima</option>
-                    <option value="GSPREMIER">GS Premier</option>
+                    <option value="GSPRO">GS Pro</option>
                 </select>
                 <span asp-validation-for="MembershipType" class="text-danger"></span>
             </div>
